<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ashwin.nanodegreeportfolio.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#ffffff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textTitle"
        android:id="@+id/title"
        android:textSize="@dimen/title_text_size"
        android:textColor="#050404"
        android:layout_marginTop="@dimen/margin_top"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/Custom_Button_Style"
        android:text="@string/buttonPopularMovies"
        android:id="@+id/buttonPopularMovies"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/margin_top_title"
         />

    <Button
        style="@style/Custom_Button_Style"
        android:text="@string/buttonStockHawk"
        android:id="@+id/buttonStockHawk"
        android:layout_below="@+id/buttonPopularMovies"
         />

    <Button
        style="@style/Custom_Button_Style"
        android:text="@string/buttonBuildItBigger"
        android:id="@+id/buttonBuildItBigger"
        android:layout_below="@+id/buttonStockHawk"
         />

    <Button
        style="@style/Custom_Button_Style"
        android:text="@string/buttonMakeYourAppMaterial"
        android:id="@+id/buttonMakeYourAppMaterial"
        android:layout_below="@+id/buttonBuildItBigger"
         />

    <Button
        style="@style/Custom_Button_Style"
        android:text="@string/buttonGoUbiquitous"
        android:id="@+id/buttonGoUbiquitous"
        android:layout_below="@+id/buttonMakeYourAppMaterial"
         />

    <Button
        style="@style/Custom_Button_Style"
        android:text="@string/buttonCapstone"
        android:id="@+id/buttonCapstone"
        android:layout_below="@+id/buttonGoUbiquitous"
        />
</RelativeLayout>
</ScrollView>
